day 3 box model

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
                 <h1>half * alive</h1>
             </div>
             
-            <div id="middle">
+            <div id="main">
                 <div id="leftimg">
-                    <img class="mainimg" src="https://stat.ameba.jp/user_images/20180904/22/riri5/3d/92/j/o0540054014260500430.jpg">
+                        <img class="mainimg" src="https://stat.ameba.jp/user_images/20180904/22/riri5/3d/92/j/o0540054014260500430.jpg">
                 </div>
                 
                 <div id="midcol">
