--- a/gallery.html
+++ b/gallery.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="css/style.css" type="text/css" />
     </head>
     <body>
-        <div class="header">Name</div>
+        <div class="heading">Name</div>
         <div class=navbar>
              <a href="index.html">Home</a>
              <a href="about.html">About</a>
@@ -14,16 +14,16 @@
         </div>
         <div class="gallery">
             <div class="thumbnail">
-                <img class="thumbnail-image" src="">
+                <img class="thumbnail-img" src="https://4.bp.blogspot.com/-W17PXNEHbcM/WgmzhxwiBAI/AAAAAAAAMGw/G726h3hLqyUaxngmgxkKlzPuAtnyDk1KgCLcBGAs/s1600/half%25E2%2580%25A2alive_press_photo_1.jpg">
+            </div>
+            <div class="thumbnail">
+                <img class="thumbnail-img" src="https://www.rocksound.tv/assets/uploads/half.alive_press20182019.png">
             </div>
             <div class="thumbnail">
                 <img class="thumbnail-image" src="">
             </div>
             <div class="thumbnail">
-                <img class="thumbnail-image" src="">
-            </div>
-            <div class="thumbnail">
-                <img class="thumbnail-image" src="">
+                <img class="thumbnail-img" src="https://i.ytimg.com/vi/HGy9wdgCWEk/maxresdefault.jpg">
             </div>
         </div>
         <div class="footer">
